# foreign_vec

./: Cargo.toml  README.md
.github/workflows/: miri.yaml
src/: lib.rs
tests/it/: main.rs
